--- a/google.html
+++ b/google.html
@@ -42,7 +42,7 @@
 
                     <div class="right">
                         <a href="a">Privacy</a>
-                        <a>Terms</a>
+                        <a href="a">Terms</a>
                         <a href="a">Settings</a>
                     </div>
 
